# outlines-cascade

./: .gitignore  README.md  config.example.toml  mkdocs.yml  pyproject.toml
.github/workflows/: python-publish.yml  rtd-publish.yml
docs/: api_reference.md  configuration.md  index.md  providers.md  quickstart.md  user_guide.md
examples/: 01_basic_pydantic.py  02_streaming.py  03_regex_local.py  04_mixed_cascade.py  05_batch.py  06_sglang.py
src/outlines_cascade/: __init__.py  adapters.py  config.py  engine.py  errors.py  response.py  type_utils.py
tests/: test_adapters.py  test_config.py  test_engine.py  test_response.py  test_streaming_batch.py  test_type_utils.py
tests/integration/: test_integration.py
